fix for arabic homepage overflow

--- a/public/css/ar.css
+++ b/public/css/ar.css
@@ -263,3 +263,8 @@ section:not(#creatives) .circle_set.lower {
     line-height: 8vw;
   }
 }
+
+.ready .main_heading h3 {
+  font-size: 3vw;
+  line-height: 5vw;
+}
